--- a/LAB01/Red-por-pasos/index.html
+++ b/LAB01/Red-por-pasos/index.html
@@ -8,41 +8,65 @@
     <title>Lab01</title>
 </head>
 <body>
-    <div class="main-container">
-        <svg width="600" height="400">
-            <ellipse ry="25" rx="24" id="svg_3" cy="219.5" cx="99.5" stroke-width="1.5" stroke="#000" fill="#fff"/>
-            <ellipse ry="25" rx="24" id="svg_4" cy="100" cx="225" stroke-width="1.5" stroke="#000" fill="#fff"/>
-            <ellipse ry="25" rx="24" id="svg_5" cy="100" cx="425" stroke-width="1.5" stroke="#000" fill="#fff"/>
-            <ellipse ry="25" rx="24" id="svg_6" cy="220" cx="350" stroke-width="1.5" stroke="#000" fill="#fff"/>
-            <ellipse ry="25" rx="24" id="svg_7" cy="220" cx="500" stroke-width="1.5" stroke="#000" fill="#fff"/>
-            <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_8" y2="112.5" x2="202.5" y1="202.499999" x1="116.499995" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_9" y2="100.5" x2="400.5" y1="98.5" x1="248.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_11" y2="144.5" x2="424.5" y1="125.5" x1="424.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_12" y2="167.5" x2="348.5" y1="194.5" x1="348.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
-            <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_14" y2="167.5" x2="399.500004" y1="167.5" x1="347.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
-            <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_15" y2="167.5" x2="456.5" y1="167.5" x1="500.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_16" y2="145.5" x2="464.5" y1="145.5" x1="391.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
-            <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_17" y2="168.5" x2="400.5" y1="146.499999" x1="400.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
-            <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_18" y2="168.5" x2="456.5" y1="146.499999" x1="456.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_19" y2="167.5" x2="499.5" y1="194.5" x1="499.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_20" y2="165.5" x2="175.5" y1="141.5" x1="149.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_21" y2="113.5" x2="322.5" y1="83.5" x1="322.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_22" y2="237.5" x2="225.5" y1="202.5" x1="225.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_23" y2="297.5" x2="293.5" y1="261.5" x1="292.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_24" y2="218.5" x2="123.5" y1="219.5" x1="327.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
-            <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_25" y2="279.5" x2="499.5" y1="245.5" x1="499.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
-            <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_26" y2="279.499998" x2="134.499999" y1="244.5" x1="104.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
-            <line stroke-linecap="null" stroke-linejoin="null" id="svg_27" y2="279.5" x2="134.5" y1="278.5" x1="499.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
-            <ellipse ry="9" rx="9" class="token-on" id="svg_29" cy="219.5" cx="99.5" stroke-width="1.5" fill="#000"/>
-            <ellipse ry="9" rx="9" class="token-off" id="svg_30" cy="100" cx="225" stroke-width="1.5" fill="#000"/>
-            <ellipse ry="9" rx="9" class="token-off" id="svg_31" cy="100" cx="425" stroke-width="1.5" fill="#000"/>
-            <ellipse ry="9" rx="9" class="token-off" id="svg_32" cy="220" cx="350" stroke-width="1.5" fill="#000"/>
-            <ellipse ry="9" rx="9" class="token-off" id="svg_33" cy="220" cx="500" stroke-width="1.5" fill="#000"/>
-        </svg>
-        <button id="btn">Siguiente</button>
-        <input type="radio" name="simulacion" id="opcion1" checked>Simulación 1
-        <input type="radio" name="simulacion" id="opcion2">Simulación 2
+    <h1>Simulación de Redes Petri</h1>
+    <div class="content">
+        <ul>
+            <li><a class="active" href="../Red-por-pasos/index.html">Por pasos</a></li>
+            <li><a href="../Red-automatica/index.html">Automática</a></li>
+        </ul>
+        <div class="container">
+            <div class="main-container">
+                <svg width="600" height="350">
+                    <ellipse ry="25" rx="24" id="svg_3" cy="219.5" cx="99.5" stroke-width="1.5" stroke="#000" fill="#fff"/>
+                    <ellipse ry="25" rx="24" id="svg_4" cy="100" cx="225" stroke-width="1.5" stroke="#000" fill="#fff"/>
+                    <ellipse ry="25" rx="24" id="svg_5" cy="100" cx="425" stroke-width="1.5" stroke="#000" fill="#fff"/>
+                    <ellipse ry="25" rx="24" id="svg_6" cy="220" cx="350" stroke-width="1.5" stroke="#000" fill="#fff"/>
+                    <ellipse ry="25" rx="24" id="svg_7" cy="220" cx="500" stroke-width="1.5" stroke="#000" fill="#fff"/>
+                    <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_8" y2="112.5" x2="202.5" y1="202.499999" x1="116.499995" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_9" y2="100.5" x2="400.5" y1="98.5" x1="248.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_11" y2="144.5" x2="424.5" y1="125.5" x1="424.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_12" y2="167.5" x2="348.5" y1="194.5" x1="348.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+                    <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_14" y2="167.5" x2="399.500004" y1="167.5" x1="347.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+                    <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_15" y2="167.5" x2="456.5" y1="167.5" x1="500.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_16" y2="145.5" x2="464.5" y1="145.5" x1="391.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
+                    <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_17" y2="168.5" x2="400.5" y1="146.499999" x1="400.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+                    <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_18" y2="168.5" x2="456.5" y1="146.499999" x1="456.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_19" y2="167.5" x2="499.5" y1="194.5" x1="499.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_20" y2="165.5" x2="175.5" y1="141.5" x1="149.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_21" y2="113.5" x2="322.5" y1="83.5" x1="322.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_22" y2="237.5" x2="225.5" y1="202.5" x1="225.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_23" y2="297.5" x2="293.5" y1="261.5" x1="292.5" fill-opacity="null" stroke-opacity="null" stroke-width="5" stroke="#000" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_24" y2="218.5" x2="123.5" y1="219.5" x1="327.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+                    <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_25" y2="279.5" x2="499.5" y1="245.5" x1="499.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+                    <line stroke="#000" stroke-linecap="null" stroke-linejoin="null" id="svg_26" y2="279.499998" x2="134.499999" y1="244.5" x1="104.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+                    <line stroke-linecap="null" stroke-linejoin="null" id="svg_27" y2="279.5" x2="134.5" y1="278.5" x1="499.5" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+                    <ellipse ry="9" rx="9" class="token-on" id="svg_29" cy="219.5" cx="99.5" stroke-width="1.5" fill="#000"/>
+                    <ellipse ry="9" rx="9" class="token-off" id="svg_30" cy="100" cx="225" stroke-width="1.5" fill="#000"/>
+                    <ellipse ry="9" rx="9" class="token-off" id="svg_31" cy="100" cx="425" stroke-width="1.5" fill="#000"/>
+                    <ellipse ry="9" rx="9" class="token-off" id="svg_32" cy="220" cx="350" stroke-width="1.5" fill="#000"/>
+                    <ellipse ry="9" rx="9" class="token-off" id="svg_33" cy="220" cx="500" stroke-width="1.5" fill="#000"/>
+                </svg>
+            </div>
+            <div class="options">
+                <div class="radios">
+                    <div class="etiqueta">
+                        <input type="radio" name="simulacion" id="opcion1" checked>
+                        <label for="opcion1">Simulación 1</label>
+                    </div>
+                    <div class="etiqueta">
+                        <input type="radio" name="simulacion" id="opcion2">
+                        <label for="opcion2">Simulación 2</label>
+                    </div>
+                </div>
+                <div class="btn_">
+                    <button id="btn">Siguiente</button>
+                </div>
+            </div>
+        </div>
     </div>
+    <footer>
+        <p>Modelamiento con Redes Petri &copy 2017</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
