--- a/LAB01/Red-por-pasos/index.html
+++ b/LAB01/Red-por-pasos/index.html
@@ -11,8 +11,9 @@
     <h1>Simulación de Redes Petri</h1>
     <div class="content">
         <ul>
-            <li><a class="active" href="../Red-por-pasos/index.html">Por pasos</a></li>
-            <li><a href="../Red-automatica/index.html">Automática</a></li>
+            <li><a class="active" href="../../LAB01/Red-por-pasos/index.html">Por pasos</a></li>
+            <li><a href="../../LAB01/Red-automatica/index.html">Automática</a></li>
+            <li><a href="../../LAB02/Red-maquina/index.html">Auto con cantidad</a></li>
         </ul>
         <div class="container">
             <div class="main-container">
