--- a/LAB02/Red-maquina/index.html
+++ b/LAB02/Red-maquina/index.html
@@ -12,10 +12,13 @@
     <div class="content">
         <ul>
             <li>
-                <a href="../Red-por-pasos/index.html">Por pasos</a>
+                <a href="../../LAB01/Red-por-pasos/index.html">Por pasos</a>
             </li>
             <li>
-                <a class="active" href="../Red-automatica/index.html">Automática</a>
+                <a href="../../LAB01/Red-automatica/index.html">Automática</a>
+            </li>
+            <li>
+                <a class="active" href="../LAB02/Red-maquina/index.html">Auto con cantidad</a>
             </li>
         </ul>
         <div>
