--- a/LAB02/Red-maquina/index.html
+++ b/LAB02/Red-maquina/index.html
@@ -25,6 +25,7 @@
             <input type="text" id="esparrago">
             <label for="frasco">Frasco</label>
             <input type="text" id="frasco">
+            <div>Productos: <span id="cant-productos"></span></div>
             <div id="message" class="hiddenMessage">Ya no es posible generar más productos</div>
         </div>
         <div class="container">
